# mosaik-api

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  collector.py  gitlab-ci.yml  simple_interface.py  simulator.py  simulator_mosaik.py
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: collector.rs  controller.rs  demo1.py  demo1_expected_output.txt  demo2.py  demo2_expected_output.txt  enerdag_sim.rs  example_sim.rs  marketplace_sim.rs  requirements.txt  test.rs  test_sim.rs
examples/expected_output/: demo1_output.txt
main/: marketplace_sim.rs
src/: default_api.rs  householdsim.rs  json.rs  lib.rs  main.rs  meta.rs  mosaik_protocol.rs  simple_simulator.rs  simulation_mosaik.rs  tcp.rs  types.rs
