[package]
authors = ["Jakob Pohl", "Christoph Gross", "Lukas Seehuber"]
edition = "2021"
name = "mosaik-rust-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = "1"
async-trait = "0.1.41"
futures = "0.3.8"
log = "0.4.11"
serde = {version = "1.0.162", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.22"


[dev-dependencies]
structopt = "0.3"
env_logger = "0.11"
mockall = "0.13"


[features]
default = []
default_api = []
