[package]
authors = ["Jakob Pohl", "Christoph Gross", "Lukas Seehuber"]
edition = "2021"
name = "mosaik-rust-api"
version = "0.1.0"
license = "MIT"
description = "High-level API for Mosaik, a flexible Smart Grid co-simulation framework."
# TODO homepage
# TODO repository
readme = "README.md"
# max 5 keywords
keywords = ["mosaik", "simulation", "framework", "api", "grid"]
# max 5 categories. Taken from https://crates.io/category_slugs
categories = ["api-bindings", "simulation"]

[dependencies]
async-std = "1"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
mockall = "0.13"

[features]
default = []

[lints.clippy]
all = { level = "deny", priority = -1 }
get_first = "allow"
expect_used = "warn"
panic_in_result_fn = "warn"
unwrap_used = "deny"
